--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-		"way/generators": "dev-master",
+		"way/generators": "~2.0",
 		"phpunit/phpunit":"3.7.*"
 	},
 	"autoload": {
