--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
 	"require": {
 		"laravel/framework": "4.1.*",
 		"way/generators": "~2.0",
-		"phpunit/phpunit":"3.7.*",
-		"heroku/heroku-buildpack-php": "dev-master"
+		"phpunit/phpunit":"3.7.*"
 
 	},
 	"autoload": {
