--- a/resources/package.json
+++ b/resources/package.json
@@ -1,14 +1,18 @@
 {
   "devDependencies": {
-    "gulp": "^3.8.5",
-    "gulp-autoprefixer": "0.0.8",
-    "gulp-concat": "^2.3.0",
-    "gulp-concat-css": "^0.1.4",
-    "gulp-less": "^1.3.1",
-    "gulp-minify-css": "^0.3.6",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-concat": "^2.4.2",
+    "gulp-concat-css": "^1.1.1",
+    "gulp-less": "^2.0.1",
+    "gulp-minify-css": "^0.3.11",
     "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.6.0",
-    "gulp-uglify": "^0.3.1",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^1.2.4",
+    "gulp-uglify": "^1.0.2",
     "path": "^0.4.9"
+  },
+  "dependencies": {
+    "gulp-install": "^0.2.0"
   }
 }
