--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,9 @@
     "jquery-placeholder": "~2.1.2",
     "jquery.cookie": "~1.4.1",
     "modernizr": "~2.8.3",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-ui-router": "~0.2.15",
+    "angular-foundation": "~0.6.0",
+    "typed.js": "*"
   }
 }
