--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "font-awesome": "~4.3.0",
     "angular-ui-router": "~0.2.15",
     "angular-foundation": "~0.6.0",
-    "typed.js": "*"
+    "typed.js": "*",
+    "holderjs": "~2.8.0"
   }
 }
